# TicTacToe

./: README.rst  TicTacToe-Linux-i686  tictactoe  tictactoe.cabal
doc/: Direction.html  Main.html  TicTacToe.html  Util.html  doc-index.html  index-frames.html  index.html  mini_Direction.html  mini_Main.html  mini_TicTacToe.html  mini_Util.html
src/: Direction.hs  Main.hs  TicTacToe.hs  Util.hs
