Name:           tictactoe
Version:        0.9
Synopsis:       A simple, 2-player Tic Tac Toe game.
License:        LGPL
License-File:   LICENSE
Author:         Dustin Rohde
Maintainer:     dtrohde@fastmail.net
Category:       Game
Build-Type:     Simple
Cabal-Version:  >=1.2

Library
  Exposed-Modules:  TicTacToe, Direction
  Build-Depends:    base, containers
  hs-source-dirs:   src

Executable tictactoe
  Main-Is:          Main.hs
  Build-Depends:    base
  hs-source-dirs:   src

source-repository head
  type:     git
  location: http://github.com/dustinrohde/TicTacToe/
